fix overflow-y at message-content

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -113,7 +113,7 @@ aside {
   height: calc(100vh - 80px);
   background: #FFF;
   border-radius: 32px;
-  box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -124,8 +124,6 @@ aside {
 .bg-content {
   max-width: 336px;
   max-height: 304px;
-  /* position: absolute;
-  top: 25%; */
 }
 
 .empty-message-content {
@@ -162,13 +160,13 @@ aside {
 }
 .message-content {
   height: 83%;
+  overflow-y: auto;
 }
 .message-btn {
   width: 100%;
   display: flex;
   margin-top: 32px;
 }
-
 
 footer {
   margin-top: 1.5rem;
